# space-os

./: .gitignore  MANUAL.md  MCP_SPIKE.md  POLLING_EXAMPLES.md  POLLING_PROTOCOL.md  README.md  config.yaml  context.md  coverage.json  justfile  migration.py  my_agent_guide.md  pyproject.toml  repomix-output.xml
agent_space/: protocols.py  space_cli.py  stats.py
agent_space/bridge/: backup.py  cli.py  config.py  sidecar.py
agent_space/bridge/coordination/: __init__.py  alerts.py  channel.py  identities.py  messages.py  notes.py  sentinel.py
agent_space/bridge/storage/: __init__.py  alerts.py  channels.py  db.py  messages.py  migration.py
agent_space/knowledge/: __init__.py  cli.py  config.py  storage.py
agent_space/lib/: context_db.py  ids.py  storage.py
agent_space/memory/: cli.py  models.py  storage.py
agent_space/spawn/: cli.py  config.py  registry.py  spawner.py
constitutions/: archon.md  claude.md  crucible.md  default.md  harbinger.md  kitsuragi.md  prime.md  scribe.md  sentinel.md
docs/: app.md  apps.md  architecture.md  bridge.md  chats.md  claude-spawn.md  compaction.md  constitutions.md  context.md  events.md  implementation.md  knowledge.md  mcp.md  memory.md  migration-context.md  operations.md  ops.md  os.md  schema.md  sessions.md  spawn-context.md  spawn.md  task.md  trace.md  tradeoffs.md
docs/archive/: space_architecture.md
docs/experiments/: oplot-lab.md  raid-2025-11-27.md  zealot-lab.md
docs/harbinger/: apps.md  os.md  process.md
log/: gemini-zealot-0831-10-07  gemini-zealot-0832-10-07
prompts/: instructions.md  memory.md  space.md
protocols/: bridge.md  knowledge.md  memory.md  space.md  spawn.md
scripts/: chats_eda.py  chats_infer_identity.py
space/: README.md  app.py  cli.py  config.py  config.yaml  errors.py  events.py  guides.py  models.py  protocols.py  readme.py  sessions.py  spawn.db  stats.py  test_sessions.py
space/api/: agents.py  channels.py  main.py  sessions.py  spawns.py  upload.py
space/apps/: __init__.py  backup.py  health.py  init.py
space/apps/agents/: __init__.py  api.py  cli.py  db.py
space/apps/backup/: __init__.py  app.py  cli.py
space/apps/bridge/: __init__.py  alert.py  alerts.py  api.py  app.py  bookmarks.py  channel.py  channels.py  cli.py  config.py  db.py  events.py  instructions.py  (+10 more)
space/bridge/: README.md  app.py  backup.py  cli.py  config.py  constitute.py  council.py  db.py  events.py  models.py  parser.py  renderer.py  utils.py  worker.py
space/canon/: cli.py
space/cli/: argv.py  bridge.py  errors.py  identity.py  knowledge.py  main.py  memory.py  output.py  spawn.py
space/commands/: README.context.md  agent.py  agents.py  analytics.py  archive.py  backup.py  chats.py  check.py  context.py  council.py  describe.py  errors.py  events.py  health.py  init.py  journal.py  launch.py  registry.py  search.py  sleep.py  sleep_entry.py  sleep_journal.py  stats.py  trace.py  wake.py  wake_entry.py
space/constitutions/: README.md  archon.md  crucible.md  harbinger.md  prime.md
space/context/: README.md  app.py  cli.py  db.py  display.py
space/core/: __init__.py  db.py  events.py  guide.py  models.py  protocols.py  queries.py
space/db/: __init__.py  sqlite.py
space/events/: events.py
space/handover/: README.md  cli.py
space/knowledge/: README.md  __init__.py  app.py  cli.py  db.py  storage.py
space/lib/: __init__.py  argv.py  backup.py  base64.py  canon.py  chats.py  cli_utils.py  codec.py  config.py  constitution.py  context.py  context_db.py  council.py  db.py  db_utils.py  detach.py  display.py  errors.py  format.py  formatters.py  fs.py  hashing.py  identity.py  ids.py  invocation.py  lattice.py  loader.py  migrations.py  models.py  output.py  paths.py  protocols.py  providers.py  query.py  readme.py  sessions.py  sha256.py  spinner.py  sqlite.py  stats.py  (+6 more)
space/memory/: README.md  __init__.py  app.py  cli.py  db.py  display.py  models.py  storage.py
space/ops/: README.md  __init__.py  app.py  db.py
space/os/: __init__.py  app.py  chats.py  config.py  config.yaml  events.py  models.py  paths.py  stats.py
space/protocols/: bridge.md
space/spawn/: README.md  __init__.py  app.py  canonical.py  cli.py  config.py  drop_legacy.py  migrate_to_uuid.py  migrate_uuid.py  registry.py  spawn.py  spawner.py
space/workspace/: cli.py  init.py  stats.py
tests/: conftest.py  test_cli_smoketests.py  test_identity_injection.py  test_memory_contracts.py  test_model_tracking.py  test_protocols.py
tests/bridge/: test_bridge_regressions.py
tests/cli/: test_agents_smoketest.py  test_bridge_smoketest.py  test_example_smoketest.py  test_knowledge_smoketest.py  test_memory_smoketest.py  test_register_smoketest.py  test_spawn_smoketest.py
tests/integration/: test_agent_autonomy.py  test_agent_command.py  test_agent_coordination.py  test_agent_id_data_flow.py  test_agents.py  test_backup.py  test_base64_cli.py  test_bridge.py  test_bridge_api.py  test_bridge_archival.py  test_bridge_coordination.py  test_bridge_polling.py  test_bridge_prefix_archive.py  test_bridge_spawn_mention.py  test_canon_paths_integration.py  test_chats_providers.py  test_check.py  test_cli_integration.py  test_cli_smoke.py  test_cli_smoketests.py  test_constitutions.py  test_context.py  test_context_cli.py  test_council_command.py  test_error_logging.py  test_events_integration.py  test_guides.py  test_integration_context_app.py  test_invocation_constitution.py  test_knowledge.py  test_memory_integration.py  test_migrations.py  test_poll_flow.py  test_polling.py  test_readme_protocols.py  test_readmes.py  test_search.py  test_sleep_journal.py  test_space_cli.py  test_space_db_cascades.py  (+17 more)
tests/lib/: test_storage.py
tests/memory/: test_memory_contracts.py
tests/spawn/: test_registry_identities.py
tests/unit/: smoke_test_db_layer.py  test_health_api.py  test_protocols.py
web/: eslint.config.js  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
web/tests/: app.test.tsx  mention-highlighting.test.tsx
(+885 files in other folders)
