[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "space-os"
version = "0.1.0"
description = "Infrastructure primitives enabling autonomous agent coordination with constitutional identity"
authors = ["Tyson Chan <tyson.chan@proton.me>"]
readme = "README.md"
packages = [
    { include = "space" }
]
include = [
    "space/os/spawn/constitutions/*.md"
]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.17.4"
pyyaml = "^6.0"
prompt-toolkit = "^3.0.47"

[tool.poetry.scripts]
bridge = "space.os.bridge.commands:app"
spawn = "space.os.spawn.commands:app"
memory = "space.os.memory.commands:app"
knowledge = "space.os.knowledge.commands:app"
context = "space.apps.context.commands:context"
space = "space.cli:main"
wake = "space.os.spawn.commands.wake:main"
sleep = "space.os.spawn.commands.sleep:main"
launch = "space.os.spawn.commands.dynamic:dispatch_agent_from_name"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-timeout = "^2.4.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RET",
]
ignore = [
    "SIM108", "SIM117", "E501", "F821",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
]
markers = [
    "asyncio: Async tests using pytest-asyncio",
    "unit: Unit tests (can run in parallel)",
    "integration: Integration tests (may need isolation)",
    "contract: API contract validation tests",
    "schema: Schema validation tests",
    "slow: Slow tests that should run last",
    "timeout: Test timeout marker for pytest-timeout"
]

[tool.pytest_asyncio]
asyncio_mode = "auto"
